all: update gradle and jdk version to 21